@@ -17,12 +17,7 @@ import java.util.concurrent.TimeUnit;
 
 /*
 
--Xms128m
--Xmx128m
--Xlog:gc=debug:file=C:\logs\gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=C:\\logs\dump
--XX:+UseSerialGC
+
 
 -Xms128m
 -Xmx128m
@@ -55,16 +50,16 @@ public class Main {
     public static void main(String[] args) throws IOException {
         System.out.println("Starting pid: " + ManagementFactory.getRuntimeMXBean().getName());
         switchOnMonitoring();
-        GarbageThread garbageThread0 = new GarbageThread("C:\\resources\\test0.txt",10000);
+        GarbageThread garbageThread0 = new GarbageThread("C:\\temp\\test0.txt",5000);
         garbageThread0.start();
-        GarbageThread garbageThread1 = new GarbageThread("C:\\resources\\test1.txt",10000);
+        GarbageThread garbageThread1 = new GarbageThread("C:\\temp\\test1.txt",5000);
         garbageThread1.start();
-        GarbageThread garbageThread2 = new GarbageThread("C:\\resources\\test2.txt",10000);
+        GarbageThread garbageThread2 = new GarbageThread("C:\\temp\\test2.txt",10000);
         garbageThread2.start();
 
         scheduler.scheduleAtFixedRate(() -> {
             gcWorkLog.printLogWorGC();
-        }, 0,10, TimeUnit.SECONDS);
+        }, 0,1, TimeUnit.MINUTES);
     }
 
 
